fix: remove deposit options/shapeshift support

--- a/src/components/accounts/ReceiveDialog/receiveDialog.scss
+++ b/src/components/accounts/ReceiveDialog/receiveDialog.scss
@@ -27,8 +27,7 @@
 }
 
 .depositOptionsContainer {
-  margin-left: 30px;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
 }
